--- a/CICD.parent/pom.xml
+++ b/CICD.parent/pom.xml
@@ -20,6 +20,12 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+        <plugin>
+        <groupId>com.tibco.plugins</groupId>
+        <artifactId>bw6-maven-plugin</artifactId>
+        <version>1.3.1</version>
+        <extensions>true</extensions>
+      </plugin>
     </plugins>
   </build>
 </project>
